--- a/README
+++ b/README
@@ -20,6 +20,9 @@
 
 ##QST## Quickstart for the very impatient #######
 
+runtime dependencies for the package can be installed with
+sudo apt-get install dkms libqt5core5a libqt5dbus5a libqt5network5a
+
 (Tested on KUbuntu 14.04)
 # Installation and system setup (skip the next 2 lines if you used the package)
 sudo apt-get install g++ cmake qtbase5-dev linux-headers-`uname -r`
