--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+inputmangler (1.2.1-1) unstable; urgency=low
+
+  * fixed possible crash at startup 
+
+ -- arek <kermit@ag.de1.cc>  Mon, 04 May 2015 09:52:32 +0100
+
 inputmangler (1.2-1) unstable; urgency=low
 
   * Initial release 
