added root CMakeLists.txt

--- a/README
+++ b/README
@@ -21,7 +21,10 @@
 ##QST## Quickstart for the very impatient #######
 
 runtime dependencies for the package can be installed with
-sudo apt-get install dkms libqt5core5a libqt5dbus5a libqt5network5a
+sudo apt-get install dkms libqt5core5a libqt5dbus5 libqt5network5 linux-libc-dev
+
+or, for older Ubuntu variants:
+sudo apt-get install dkms libqt5core5a libqt5dbus5a libqt5network5a linux-libc-dev
 
 (Tested on KUbuntu 14.04)
 # Installation and system setup (skip the next 2 lines if you used the package)
